--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
       <h1 class="navbar-title">TKO</h1>
 
+      <h1>Hello mikialia</h1></p>
+
       <nav class="navbar-menu">
         <button type="button" class="active">Home</button>
         <button type="button" class="active">FAQ</button>
